@@ -157,9 +157,9 @@ be_visitor_interface_sh::visit_interface (be_interface *node)
 
   // Some useful typedefs.
   *os << "// Useful for template programming." << be_nl
-      << "typedef " << node->name () << " _stub_type;" << be_nl
-      << "typedef " << node->name () << "_ptr _stub_ptr_type;" << be_nl
-      << "typedef " << node->name () << "_var _stub_var_type;" 
+      << "typedef ::" << node->name () << " _stub_type;" << be_nl
+      << "typedef ::" << node->name () << "_ptr _stub_ptr_type;" << be_nl
+      << "typedef ::" << node->name () << "_var _stub_var_type;" 
       << be_nl << be_nl;
 
   // Copy constructor and destructor.
